tests/neg/typemacro-no-bound.check
-- Error: tests/neg/typemacro-no-bound.scala:5:21 ----------------------------------------------------------------------
5 |  type M[X <: Int] = ${ mImpl[X] } // error
  |                     ^
  |                     a type macro requires an explicit upper bound, e.g. `type M[X] <: U = ${ impl[X] }`
